--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
               <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-              <p>Alexander Pierce</p>
+              <p>Stephen D. Wells</p>
               <!-- Status -->
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
@@ -73,8 +73,8 @@ layout: default
       <!-- Main Footer -->
       <footer class="main-footer">
         <!-- To the right -->
-        <div class="pull-right hidden-xs">
-          Anything you want
+	<div class="pull-right hidden-xs">
+	 where being mean is just an average day.
         </div>
         <!-- Default to the left -->
         <strong>Copyright &copy; 2015 <a href="#">Company</a>.</strong> All rights reserved.
